--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     container_name: sparray
     volumes:
       - ./:/usr/src/app
-#       - sparray_node_modules:/usr/src/app/node_modules
+      - sparray_node_modules:/usr/src/app/node_modules
 
 
-# volumes:
-#   sparray_node_modules:
-#     driver: local
-#     driver_opts:
-#       type: none
-#       o: bind
-#       device: ${PWD}/node_modules
+volumes:
+  sparray_node_modules:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/node_modules
