--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "contributors": [],
   "scripts": {
     "start": "",
-    "build": "node ./scripts/clear && tsc && npm run rollup && npm run uglify && node ./scripts/copy && npm run test",
+    "build": "node ./scripts/clear && tsc && npm run rollup && node ./scripts/copy && npm run test",
     "rollup:mjs": "rollup --config rollup.config.mjs",
     "rollup:cjs": "rollup --config rollup.config.cjs.mjs",
     "rollup": "npm run rollup:mjs && npm run rollup:cjs",
@@ -41,14 +41,15 @@
     "@babel/core": "7.23.2",
     "@babel/preset-env": "7.23.2",
     "@rollup/plugin-babel": "6.0.4",
-    "@rollup/plugin-commonjs": "25.0.5",
-    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-commonjs": "28.0.1",
+    "@rollup/plugin-node-resolve": "15.3.0",
     "babel-jest": "29.7.0",
     "core-js": "3.33.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "rollup": "4.0.2",
-    "typescript": "5.2.2"
+    "rollup": "4.24.0",
+    "typescript": "5.6.3",
+    "uglify-js": "3.19.3"
   }
 }
 
