--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "ES6",
     "moduleResolution": "node",
     "target": "ES6",
-    "lib": ["es2015"],
+    "lib": ["es2015", "dom"],
     "sourceMap": false,
     "noImplicitAny": true,
     "noImplicitReturns": true,
