update es6 module output

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "types": "dist/sparray",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DWTechs/Sparray.js"
+    "url": "git+https://github.com/DWTechs/Sparray.js.git"
   },
   "bugs": {
     "url": "https://github.com/DWTechs/Sparray.js/issues",
@@ -38,7 +38,6 @@
     "@dwtechs/checkard": "2.27.0"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "28.0.1",
     "@rollup/plugin-node-resolve": "15.3.0",
     "core-js": "3.38.1",
